# BiliBili-Manga-Downloader

./: .gitignore  .pylintrc  Pipfile  README.md  UPDATE.md  app.py  app.spec  build.sh  linting.py  macos.spec  main.py  makefile.sh  pyproject.toml  requirements.txt  setup.sh  version.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codacy.yml  codeql.yml  dependency-review.yml  greetings.yml  pylint.yml
src/: BIliQrCode.py  BiliPlus.py  BiliQrCode.py  Comic.py  ComicInfoXML.py  DownloadManager.py  Episode.py  SearchComic.py  Utils.py  searchComic.py  utils.py
src/ui/: DownloadUI.py  MainGUI.py  MangaUI.py  MyAbout.py  MyAboutUI.py  MyGUI.py  QrCodeUI.py  SettingUI.py  WebUI.py  mainWidget.ui  myAbout.ui  resource.qrc  resource_rc.py  ui_mainWidget.py  ui_myAbout.py
src/ui/PySide_src/: mainWidget.ui  mainWidget_ui.py  mainWindow.ui  mainWindow_mac.ui  mainWindow_mac_ui.py  mainWindow_ui.py  mainWindow_ui_mac.py  myAbout.ui  myAbout_ui.py  qrCode.ui  qrCode_ui.py  resource.qrc  resource_rc.py
src/ui/PySide_src/imgs/: icon.icns
src/ui/imgs/: test.py
